api(feat): add store access
