# api/src/store-access/model/IStoreAccessModel.ts
@@ -1,0 +1,8 @@
+import { Document, Schema } from "mongoose";
+
+export interface IStoreAccessModel extends Document {
+  mobileUserId: Schema.Types.ObjectId;
+  storeId: Schema.Types.ObjectId;
+  accessed: boolean;
+  scannedAt: Date;
+}
