# api/src/store-access/store-access.controller.ts
@@ -1,4 +1,13 @@
-import { Controller } from '@nestjs/common';
+import { Controller, Get, HttpCode, Param } from '@nestjs/common';
+import { StoreAccessService } from './store-access.service';
 
 @Controller('store-access')
-export class StoreAccessController {}
+export class StoreAccessController {
+  constructor(private readonly service: StoreAccessService) {}
+  
+  @Get('/:mobileUserId/:qrText')
+  @HttpCode(200)
+  public async access(@Param('mobileUserId') mobileUserId: string, @Param('qrText') qrText: string) {
+    return this.service.access(mobileUserId, qrText);
+  }
+}
